# transfer-learning-drug-discovery

./: .gitignore  README.md  costs.md  pyproject.toml  review.md
docs/: chemeleon-overfitting.md  findings-eda-and-xgboost.md  foundation-model-puzzle.md  initial-plan.md  random-label-pretraining.md  reverse-transfer.md  tukey-hsd-interval-widths.md  xgb-transfer-ablation.md
notebooks/: 01-data-acquisition.py  02-eda.html  02-eda.py  03-train-baselines.html  03-train-baselines.py  04-train-chemprop.py  05-chemeleon.py  06-analysis.html  06-analysis.py  07-chemeleon-frozen.html  07-chemeleon-frozen.py  08-failure-analysis.py  09-chemprop-saliency.py  10-hlm-importance.html  10-hlm-importance.py  11-rlm-base-comparison.html  11-rlm-base-comparison.py  12-pampa-importance.html  12-pampa-importance.py  13-chemeleon-pampa-importance.html  13-chemeleon-pampa-importance.py  14-reverse-transfer.html  14-reverse-transfer.py  15-data-efficiency.html  15-data-efficiency.py  16-aggregate-importance.html  16-aggregate-importance.py
notebooks/__marimo__/session/: 02-eda.py.json  03-train-baselines.py.json  06-analysis.py.json  07-chemeleon-frozen.py.json  10-hlm-importance.py.json  11-rlm-base-comparison.py.json  12-pampa-importance.py.json  13-chemeleon-pampa-importance.py.json  14-reverse-transfer.py.json  15-data-efficiency.py.json  16-aggregate-importance.py.json
scripts/: run-chemeleon-frozen-training.py  run-chemeleon-training.py  run-chemprop-training.py  run-rlm-base-eval-nn.py  run-rlm-base-eval-xgb.py  run-xgb-ablation.py  run-xgb-random-pretrain.py
