[project]
name = "xfer-learning"
version = "0.1.0"
description = "Transfer learning demonstration for drug discovery small-molecule ML models"
requires-python = ">=3.11"
dependencies = [
    "chemprop>=2.2.3",
    "dataframely>=0.5.0",
    "hdbscan>=0.8.40",
    "loguru>=0.7.0",
    "marimo>=0.21.0",
    "matplotlib>=3.9.0",
    "polars>=1.0.0",
    "rdkit>=2024.3.1",
    "scikit-learn>=1.5.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
    "typeguard>=4.0.0",
    "umap-learn>=0.5.7",
    "useful-rdkit-utils>=0.93.0",
    "xgboost>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xfer_learning"]
